feat:add body text

--- a/features.html
+++ b/features.html
@@ -9,5 +9,6 @@
 <body>
     <h1>What features?</h1>
     <p>Most of the interesting features were already listed during class</p>
+    <p>We love IMD</p>
 </body>
 </html>
