add header and body text

--- a/features.html
+++ b/features.html
@@ -10,5 +10,6 @@
     <h1>What features?</h1>
     <p>Most of the interesting features were already listed during class</p>
     <p>We love IMD</p>
+    <p>Extra test</p>
 </body>
 </html>
